Se ejercicio de formato

--- a/PyHk_A2_Cadenas.ipynb
+++ b/PyHk_A2_Cadenas.ipynb
@@ -614,6 +614,159 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "El Sr. Vincent trabaja en una empresa de fabricación de felpudos. Un día, diseñó un nuevo felpudo con las siguientes especificaciones:\r\n",
+    "\r\n",
+    "El tamaño del felpudo debe ser NxM. (N es un número natural impar y M es 3 veces N).\r\n",
+    "El diseño debe tener escrito \"WELCOME\" en el centro.\r\n",
+    "\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "# Usando ciclos usuales\r\n",
+    "N, M = map(int, input().split(\" \"))\r\n",
+    "\r\n",
+    "for i in range(N):\r\n",
+    "    pattern = \".|.\"\r\n",
+    "    if i<(N-1)/2:\r\n",
+    "        print((pattern*(2*i+1)).center(M,\"-\"))\r\n",
+    "    elif i == (N-1)/2:\r\n",
+    "        print(\"WELCOME\".center(M,\"-\"))\r\n",
+    "    else:\r\n",
+    "        print((pattern*(2*(N-1-i)+1)).center(M,\"-\"))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "------------.|.------------\n",
+      "---------.|..|..|.---------\n",
+      "------.|..|..|..|..|.------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "----------WELCOME----------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "------.|..|..|..|..|.------\n",
+      "---------.|..|..|.---------\n",
+      "------------.|.------------\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "# Usando compresion de listas\r\n",
+    "\r\n",
+    "n, m = map(int, input().split())\r\n",
+    "\r\n",
+    "pattern = [(\".|.\"*(2*i+1)).center(m,\"-\") for i in range(n//2)]\r\n",
+    "cadena = \"\\n\".join(pattern + [\"WELCOME\".center(m,\"-\")]+pattern[::-1])\r\n",
+    "print(cadena)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "------------.|.------------\n",
+      "---------.|..|..|.---------\n",
+      "------.|..|..|..|..|.------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "----------WELCOME----------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "------.|..|..|..|..|.------\n",
+      "---------.|..|..|.---------\n",
+      "------------.|.------------\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# String formating\r\n",
+    "\r\n",
+    "Dado un número entero, n, imprime los siguientes valores para cada número entero i de 1 a n:\r\n",
+    "\r\n",
+    "1. Decimal\r\n",
+    "2. Octal\r\n",
+    "3. Hexadecimal (en mayúsculas)\r\n",
+    "4. Binario"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "source": [
+    "\r\n",
+    "n = int(input(\"Elementos\"))\r\n",
+    "width = len(f\"{n:b}\") # Numero de bits para representacion binaria\r\n",
+    "#width = len(\"{0:b}\".format(n))\r\n",
+    "\r\n",
+    "for i in range(1, n+1):\r\n",
+    "    print(f\"{i:{width}d} {i:{width}o} {i:{width}X} {i:{width}b}\") \r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   1    1    1    1\n",
+      "   2    2    2   10\n",
+      "   3    3    3   11\n",
+      "   4    4    4  100\n",
+      "   5    5    5  101\n",
+      "   6    6    6  110\n",
+      "   7    7    7  111\n",
+      "   8   10    8 1000\n",
+      "   9   11    9 1001\n",
+      "  10   12    A 1010\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "number = int(input(\"Elementos: \"))\r\n",
+    "padding = number.bit_length()\r\n",
+    "for i in range(1, number+1):\r\n",
+    "    print(f\"{i:{padding}d} {i:{padding}o} {i:{padding}X} {i:{padding}b}\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n",
+      "   1    1    1    1\n",
+      "   2    2    2   10\n",
+      "   3    3    3   11\n",
+      "   4    4    4  100\n",
+      "   5    5    5  101\n",
+      "   6    6    6  110\n",
+      "   7    7    7  111\n",
+      "   8   10    8 1000\n",
+      "   9   11    9 1001\n",
+      "  10   12    A 1010\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
