--- a/PyHk_A2_Cadenas.ipynb
+++ b/PyHk_A2_Cadenas.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "source": [
     "# Usando las  inbuilt libraries\r\n",
     "cadena = \"HOLA Me llamo mike\"\r\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "source": [
     "# En caso de querer recordar las demas\r\n",
     "print(\"\".join([i.lower() if i.isupper() else i.upper() for i in input()]))"
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "mAÑANA sERa OtRO dIa\n"
+      "MIGUEL ANGEL LOPEZ CASTILLO L O L \n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "source": [
     "# Sin hacer uso de los metodos islower, isupper\r\n",
     "def swap_case(s):\r\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "source": [
     "# Usando el metodo lambda\r\n",
     "print(*map(lambda char:char.lower() if char.isupper() else char.upper(), input()), sep=\"\")"
@@ -93,8 +93,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Hola COmo estas mAÑANA nos vemos AYIOS\n",
-      "hOLA coMO ESTAS Mañana NOS VEMOS ayios\n"
+      "S\n"
      ]
     }
    ],
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "source": [
     "# Solucion basica\r\n",
     "nombre = \"Miguel Angel Lopez Castillo\"\r\n",
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "source": [
     "# Solucion elegante\r\n",
     "cadena = input(\"Cadena: \")\r\n",
@@ -149,8 +148,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Cadena: Sic parvis magna\n",
-      "Sic-parvis-magna\n"
+      "\n"
      ]
     }
    ],
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "source": [
     "# Solucion elegante\r\n",
     "print(\"-\".join(input(\"Cadena: \").split(\" \")))"
@@ -168,8 +166,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Cadena: Intriguin possibilities\n",
-      "Intriguin-possibilities\n"
+      "\n"
      ]
     }
    ],
@@ -187,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "source": [
     "# Usando funciones\r\n",
     "def print_full_name(first, last):\r\n",
@@ -206,9 +203,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Nombre: Miguel Angel\n",
-      "Apellido: Lopez Castillo\n",
-      "Hello Miguel Angel Lopez Castillo You just delved into python!\n"
+      "Hello sd You just delved into python!\n"
      ]
     }
    ],
@@ -216,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "source": [
     "# Programa acortado\r\n",
     "\r\n",
@@ -227,9 +222,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "name: miguel angel\n",
-      "last name: lopez castillo\n",
-      "Hello miguel angel lopez castillo You just delved into python!\n"
+      "Hello sd sd You just delved into python!\n"
      ]
     }
    ],
@@ -237,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "source": [
     "# Usando funciones\r\n",
     "def print_full_name(first, last):\r\n",
@@ -255,8 +248,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Maria Fernanda Lugo Cortez\n",
-      "Maria Fernanda Lugo Cortez\n"
+      "sd sd\n",
+      "sd sd\n"
      ]
     }
    ],
@@ -272,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "source": [
     "def mutate_string(string, position, character):\r\n",
     "    return string[:position] + character + string[position+1:]\r\n",
@@ -284,12 +277,14 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hola que tal como estas\n",
-      "10 m\n",
-      "Hola que tml como estas\n"
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-7472374f4c1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0ms_new\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmutate_string\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms_new\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
      ]
     }
    ],
@@ -307,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "def search_substring(cadena, subcadena):\r\n",
     "    posiciones =[]\r\n",
@@ -365,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "# USANDO COMPRESION DE LISTAS------\r\n",
     "# BASADO EN:\r\n",
@@ -416,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "# Comprobando cadenas\r\n",
     "## No se recomienda el uso de eval\r\n",
@@ -441,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "# Evitando el uso de eval\r\n",
     "\r\n",
@@ -474,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "source": [
     "test = \"ABCDEFGHIJKLIMNOQRSTUVWXYZ\"\r\n",
     "ancho = 4\r\n",
@@ -505,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "import string\r\n",
     "import random\r\n",
@@ -535,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "\r\n",
     "## Definiendo cadena tamaño 50\r\n",
@@ -567,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "source": [
     "import string\r\n",
     "\"\"\"\r\n",
@@ -626,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "# Usando ciclos usuales\r\n",
     "N, M = map(int, input().split(\" \"))\r\n",
@@ -661,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "# Usando compresion de listas\r\n",
     "\r\n",
@@ -706,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "source": [
     "\r\n",
     "n = int(input(\"Elementos\"))\r\n",
@@ -738,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "source": [
     "number = int(input(\"Elementos: \"))\r\n",
     "padding = number.bit_length()\r\n",
@@ -761,6 +756,122 @@
       "   8   10    8 1000\n",
       "   9   11    9 1001\n",
       "  10   12    A 1010\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Rangoli alfabetico\r\n",
+    "Se te da un número entero, N. Tu tarea es imprimir un rangoli del alfabeto de tamaño N. \r\n",
+    "\r\n",
+    "The center of the rangoli has the first alphabet letter a, and the boundary has the N alphabet letter (in alphabetical order).\r\n",
+    "\r\n",
+    "Restriccion: 0 < size < 27"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import string\r\n",
+    "\r\n",
+    "alpha = string.ascii_lowercase\r\n",
+    "\r\n",
+    "n = int(input())\r\n",
+    "lst = []\r\n",
+    "for i in range(n):\r\n",
+    "    s = \"-\".join(alpha[i:n])\r\n",
+    "    lst.append((s[::-1]+s[1:]).center(4*n-3, \"-\"))\r\n",
+    "\r\n",
+    "print(\"\\n\".join(lst[:0:-1]+lst))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "abcdefghijklmnopqrstuvwxyz\n",
+      "--------e--------\n",
+      "------e-d-e------\n",
+      "----e-d-c-d-e----\n",
+      "--e-d-c-b-c-d-e--\n",
+      "e-d-c-b-a-b-c-d-e\n",
+      "--e-d-c-b-c-d-e--\n",
+      "----e-d-c-d-e----\n",
+      "------e-d-e------\n",
+      "--------e--------\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Capitalize\r\n",
+    "Se le pide que se asegure de que los nombres y apellidos de las personas empiecen con mayúscula en sus pasaportes. Por ejemplo, alison heck debe escribirse correctamente en mayúsculas como Alison Heck"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "name_c =input()\r\n",
+    "name_c = [name.capitalize()  for name in name_c.split(\" \")]\r\n",
+    "print(*name_c)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Miguel Angel Lopez Castillo As Sdf Dfd Ds As\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "def solve(s):\r\n",
+    "    name_c = s.split(\" \")\r\n",
+    "    name_c = \" \".join([name.capitalize() for name in name_c])\r\n",
+    "    return name_c\r\n",
+    "\r\n",
+    "name = solve(\"hj h h h h h h h sd\")\r\n",
+    "print(name)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Hj H H H H H H H Sd\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "a_string = input().split(\" \")\r\n",
+    "print(\" \".join((word.capitalize() for word in a_string)))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Mañana M K L I Error\n"
      ]
     }
    ],
