--- a/PyHk_A2_Cadenas.ipynb
+++ b/PyHk_A2_Cadenas.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "source": [
     "# En caso de querer recordar las demas\r\n",
     "print(\"\".join([i.lower() if i.isupper() else i.upper() for i in input()]))"
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "MIGUEL ANGEL LOPEZ CASTILLO L O L \n"
+      "MAÑAnA NOs vEMOS aMIGo\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "source": [
     "# Programa acortado\r\n",
     "\r\n",
@@ -222,7 +222,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Hello sd sd You just delved into python!\n"
+      "Hello maria fernanda You just delved into python!\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "source": [
     "# Usando funciones\r\n",
     "def print_full_name(first, last):\r\n",
@@ -248,8 +248,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "sd sd\n",
-      "sd sd\n"
+      "valeria zanoria\n",
+      "valeria zanoria\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "source": [
     "def mutate_string(string, position, character):\r\n",
     "    return string[:position] + character + string[position+1:]\r\n",
@@ -277,14 +277,10 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-7472374f4c1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0ms_new\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmutate_string\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms_new\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Ciela\n"
      ]
     }
    ],
@@ -872,6 +868,84 @@
      "name": "stdout",
      "text": [
       "Mañana M K L I Error\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# The minion game\r\n",
+    "Ambos jugadores reciben la misma cadena, S.\r\n",
+    "\r\n",
+    "Ambos jugadores tienen que hacer subcadenas utilizando las letras de la cadena S.\r\n",
+    "\r\n",
+    "* Stuart tiene que formar palabras que empiecen por consonantes.\r\n",
+    "* Kevin tiene que hacer palabras que empiecen por vocales.\r\n",
+    "\r\n",
+    "El juego termina cuando ambos jugadores han hecho todas las subcadenas posibles.\r\n",
+    "\r\n",
+    "Puntuación:\r\n",
+    "* Un jugador obtiene +1 punto por cada aparición de la subcadena en la cadena.\r\n",
+    "\r\n",
+    "Por ejemplo\r\n",
+    "\r\n",
+    "Cadena S= BANANA\r\n",
+    "\r\n",
+    "Palabra de inicio de vocal de Kevin = ANA\r\n",
+    "\r\n",
+    "Aquí, ANA aparece dos veces en BANANA. Por lo tanto, Kevin obtendrá 2 puntos.\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Minion game\r\n",
+    "s = input(\"String (mayusculas)\")\r\n",
+    "\r\n",
+    "vowels = \"AEIOU\"\r\n",
+    "kevsc = 0\r\n",
+    "stusc = 0\r\n",
+    "\r\n",
+    "for i in range(len(s)):\r\n",
+    "    if s[i] in vowels:\r\n",
+    "        kevsc += (len(s)-i)\r\n",
+    "    else:\r\n",
+    "        stusc += (len(s)-i)\r\n",
+    "\r\n",
+    "if kevsc > stusc:\r\n",
+    "    print(f\"Kevin {kevsc}\")\r\n",
+    "elif kevsc < stusc:\r\n",
+    "    print(f\"Stuart {stusc}\")\r\n",
+    "else:\r\n",
+    "    print(\"Draw\")\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "s = input(\"Cadena: \")\r\n",
+    "\r\n",
+    "for i in range(len(s)):\r\n",
+    "    print(i, s[i])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0 c\n",
+      "1 a\n",
+      "2 d\n",
+      "3 e\n",
+      "4 n\n",
+      "5 a\n"
      ]
     }
    ],
