Se agrega el ultimo ejercicio de cadenas

--- a/PyHk_A2_Cadenas.ipynb
+++ b/PyHk_A2_Cadenas.ipynb
@@ -10,15 +10,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Swap case\n",
-    "\n",
-    "Se te da una cadena y tu tarea es intercambiar las mayúsculas y minúsculas. En otras palabras, convertir todas las letras minúsculas en mayúsculas y viceversa\n"
+    "## Swap case\r\n",
+    "\r\n",
+    "Se te da una cadena y tu tarea es intercambiar las mayúsculas y minúsculas. En otras palabras, convertir todas las letras minúsculas en mayúsculas y viceversa\r\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "source": [
     "# Usando las  inbuilt libraries\r\n",
     "cadena = \"HOLA Me llamo mike\"\r\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "source": [
     "# En caso de querer recordar las demas\r\n",
     "print(\"\".join([i.lower() if i.isupper() else i.upper() for i in input()]))"
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "MAÑAnA NOs vEMOS aMIGo\n"
+      "3\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "source": [
     "# Sin hacer uso de los metodos islower, isupper\r\n",
     "def swap_case(s):\r\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "source": [
     "# Usando el metodo lambda\r\n",
     "print(*map(lambda char:char.lower() if char.isupper() else char.upper(), input()), sep=\"\")"
@@ -93,7 +93,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "S\n"
+      "3\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "source": [
     "# Solucion basica\r\n",
     "nombre = \"Miguel Angel Lopez Castillo\"\r\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "source": [
     "# Solucion elegante\r\n",
     "cadena = input(\"Cadena: \")\r\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "source": [
     "# Solucion elegante\r\n",
     "print(\"-\".join(input(\"Cadena: \").split(\" \")))"
@@ -166,7 +166,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n"
+      "3\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "source": [
     "# Usando funciones\r\n",
     "def print_full_name(first, last):\r\n",
@@ -203,7 +203,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Hello sd You just delved into python!\n"
+      "Hello 3 3 You just delved into python!\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "source": [
     "# Programa acortado\r\n",
     "\r\n",
@@ -222,7 +222,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Hello maria fernanda You just delved into python!\n"
+      "Hello 3 3 You just delved into python!\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "source": [
     "# Usando funciones\r\n",
     "def print_full_name(first, last):\r\n",
@@ -248,8 +248,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "valeria zanoria\n",
-      "valeria zanoria\n"
+      " \n",
+      " \n"
      ]
     }
    ],
@@ -265,12 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "source": [
     "def mutate_string(string, position, character):\r\n",
     "    return string[:position] + character + string[position+1:]\r\n",
     "\r\n",
-    "s = input()\r\n",
+    "s = \"amigos\" \r\n",
     "i, c = input().split()\r\n",
     "s_new = mutate_string(s, int(i), c)\r\n",
     "print(s_new)"
@@ -280,7 +280,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Ciela\n"
+      "amigas\n"
      ]
     }
    ],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "source": [
     "name_c =input()\r\n",
     "name_c = [name.capitalize()  for name in name_c.split(\" \")]\r\n",
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "source": [
     "def solve(s):\r\n",
     "    name_c = s.split(\" \")\r\n",
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "source": [
     "a_string = input().split(\" \")\r\n",
     "print(\" \".join((word.capitalize() for word in a_string)))"
@@ -927,25 +927,49 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "source": [
-    "s = input(\"Cadena: \")\r\n",
+    "# Fusione las herramientas\r\n",
     "\r\n",
-    "for i in range(len(s)):\r\n",
-    "    print(i, s[i])"
+    "Considere los siguiente:\r\n",
+    "* Una cadena S, de tamaño $n$ donde $S = C_0C_1...C_{n-1}$\r\n",
+    "* Un entero, K, donde k es factor de $n$\r\n",
+    "\r\n",
+    "Podemos dividir $S$ en $\\frac{n}{k}$ subcadenas donde cada subcadena $t_i$ consiste en un bloque contiguo de $k$ caracteres en $S$\r\n",
+    "\r\n",
+    "Se usa cada bloque de caracteres $t_i$ para crear una cadena $u_i$ tal que:\r\n",
+    "* Los caracteres en $u_i$ son una subsecuencia de los caracteres en $t_i$\r\n",
+    "* Cualquier aparición repetida de un carácter se elimina de la cadena de tal manera que cada carácter en $u_i$ ocurre exactamente una vez, en otras palabras si un caracter en un indice $j$ en $t_i$ ocurre en un indice anterior $< j$, entonces no se incluye el caracter en la cadena $u_i$\r\n",
+    "\r\n",
+    "Dado un valor $S$ y $k$, imprime $n/k$ lineas donde cada linea $i$ denota la cadena $u_i$\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "S = \"AABCAAADA\"\r\n",
+    "K = int(input())\r\n",
+    "temp = []\r\n",
+    "len_temp = 0\r\n",
+    "for item in S:\r\n",
+    "    len_temp +=1\r\n",
+    "    if item not in temp:\r\n",
+    "        temp.append(item)\r\n",
+    "    if len_temp == K:\r\n",
+    "        print(\"\".join(temp))\r\n",
+    "        temp=[]\r\n",
+    "        len_temp = 0\r\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 c\n",
-      "1 a\n",
-      "2 d\n",
-      "3 e\n",
-      "4 n\n",
-      "5 a\n"
+      "AB\n",
+      "CA\n",
+      "AD\n"
      ]
     }
    ],
@@ -953,9 +977,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 7,
+   "source": [
+    "# Metodo pythonista\r\n",
+    "#S = input(\"Cadena\")\r\n",
+    "S = \"AABCAAADA\"\r\n",
+    "N = int(input(\"Split: \"))\r\n",
+    "\r\n",
+    "for part in zip(*[iter(S)]*N):\r\n",
+    "    d = dict()\r\n",
+    "    print(\"\".join([d.setdefault(c,c) for c in part if c not in d]))\r\n",
+    "    print(d)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "AB\n",
+      "{'A': 'A', 'B': 'B'}\n",
+      "CA\n",
+      "{'C': 'C', 'A': 'A'}\n",
+      "AD\n",
+      "{'A': 'A', 'D': 'D'}\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
