ENuevo comienzo desde nuevo equipo

--- a/testForCourse.ipynb
+++ b/testForCourse.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
+    "# Ejercicios para probar funciones\r\n",
     "import pandas as pd\r\n",
     "import numpy as np\r\n",
     "\r\n",
@@ -37,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "print()"
+   ],
    "outputs": [],
    "metadata": {}
   }
