--- a/FCCampDataAnalysis_A1.ipynb
+++ b/FCCampDataAnalysis_A1.ipynb
@@ -59,6 +59,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [10, 11, 12, 13, 14, 15, 16, 17, 18, 19], [20, 21, 22, 23, 24, 25, 26, 27, 28, 29], [30, 31, 32, 33, 34, 35, 36, 37, 38, 39], [40, 41, 42, 43, 44, 45, 46, 47, 48, 49], [50, 51, 52, 53, 54, 55, 56, 57, 58, 59], [60, 61, 62, 63, 64, 65, 66, 67, 68, 69], [70, 71, 72, 73, 74, 75, 76, 77, 78, 79], [80, 81, 82, 83, 84, 85, 86, 87, 88, 89], [90, 91, 92, 93, 94, 95, 96, 97, 98, 99]]\n",
+      "\n",
+      "[[0, 10, 20, 30, 40, 50, 60, 70, 80, 90], [1, 11, 21, 31, 41, 51, 61, 71, 81, 91], [2, 12, 22, 32, 42, 52, 62, 72, 82, 92], [3, 13, 23, 33, 43, 53, 63, 73, 83, 93], [4, 14, 24, 34, 44, 54, 64, 74, 84, 94], [5, 15, 25, 35, 45, 55, 65, 75, 85, 95], [6, 16, 26, 36, 46, 56, 66, 76, 86, 96], [7, 17, 27, 37, 47, 57, 67, 77, 87, 97], [8, 18, 28, 38, 48, 58, 68, 78, 88, 98], [9, 19, 29, 39, 49, 59, 69, 79, 89, 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Esto genera el una lista de listas segun el formato\n",
+    "lista = [_ for _ in range(0,100)]\n",
+    "\n",
+    "def frm_list(lista, side):\n",
+    "    \"\"\"Forma conjuntos de tamaño 'side' con los elementos de la lista, \n",
+    "        deja fuera elementos restantes\"\"\"\n",
+    "    inicio=0\n",
+    "    listaFormat = []\n",
+    "    for i in range (len(lista)+1):\n",
+    "        if i%side==0 and i>0:\n",
+    "            listaFormat.append(lista[inicio:i])\n",
+    "            inicio = i\n",
+    "    return listaFormat\n",
+    "\n",
+    "def matriz_numeros(lista, size):\n",
+    "    rows = frm_list(lista, size)\n",
+    "    columns = []\n",
+    "    for i in range(size):\n",
+    "        for j in rows:\n",
+    "            columns.append(j[i])\n",
+    "    # Se agrupa segun tamaño requerido\n",
+    "    columns = frm_list(columns,size)\n",
+    "    return (rows,columns)\n",
+    "\n",
+    "filas, columnas = matriz_numeros(lista, 10) \n",
+    "print(filas)\n",
+    "print()\n",
+    "print(columnas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
