Ejercicio terminado con exito

--- a/FCCampDataAnalysis_A1.ipynb
+++ b/FCCampDataAnalysis_A1.ipynb
@@ -45,36 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def calculate(list):\n",
-    "    if (len(list)!=9):\n",
-    "        raise ValueError(\"List must contain \")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [10, 11, 12, 13, 14, 15, 16, 17, 18, 19], [20, 21, 22, 23, 24, 25, 26, 27, 28, 29], [30, 31, 32, 33, 34, 35, 36, 37, 38, 39], [40, 41, 42, 43, 44, 45, 46, 47, 48, 49], [50, 51, 52, 53, 54, 55, 56, 57, 58, 59], [60, 61, 62, 63, 64, 65, 66, 67, 68, 69], [70, 71, 72, 73, 74, 75, 76, 77, 78, 79], [80, 81, 82, 83, 84, 85, 86, 87, 88, 89], [90, 91, 92, 93, 94, 95, 96, 97, 98, 99]]\n",
+      "[[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
       "\n",
-      "[[0, 10, 20, 30, 40, 50, 60, 70, 80, 90], [1, 11, 21, 31, 41, 51, 61, 71, 81, 91], [2, 12, 22, 32, 42, 52, 62, 72, 82, 92], [3, 13, 23, 33, 43, 53, 63, 73, 83, 93], [4, 14, 24, 34, 44, 54, 64, 74, 84, 94], [5, 15, 25, 35, 45, 55, 65, 75, 85, 95], [6, 16, 26, 36, 46, 56, 66, 76, 86, 96], [7, 17, 27, 37, 47, 57, 67, 77, 87, 97], [8, 18, 28, 38, 48, 58, 68, 78, 88, 98], [9, 19, 29, 39, 49, 59, 69, 79, 89, 99]]\n"
+      "[[0, 3, 6], [1, 4, 7], [2, 5, 8]]\n"
      ]
     }
    ],
    "source": [
     "## Esto genera el una lista de listas segun el formato\n",
-    "lista = [_ for _ in range(0,100)]\n",
+    "lista = [_ for _ in range(0,9)]\n",
     "\n",
     "def frm_list(lista, side):\n",
     "    \"\"\"Forma conjuntos de tamaño 'side' con los elementos de la lista, \n",
@@ -97,10 +83,101 @@
     "    columns = frm_list(columns,size)\n",
     "    return (rows,columns)\n",
     "\n",
-    "filas, columnas = matriz_numeros(lista, 10) \n",
+    "filas, columnas = matriz_numeros(lista,3) \n",
     "print(filas)\n",
     "print()\n",
     "print(columnas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "{'mean': [[3.0, 4.0, 5.0], [1.0, 4.0, 7.0], 4.0], 'variance': [[6.0, 6.0, 6.0], [0.6666666666666666, 0.6666666666666666, 0.6666666666666666], 6.666666666666667], 'standar desviaton': [[2.449489742783178, 2.449489742783178, 2.449489742783178], [0.816496580927726, 0.816496580927726, 0.816496580927726], 2.581988897471611], 'max': [[6, 7, 8], [2, 5, 8], 8], 'min': [[0, 1, 2], [0, 3, 6], 0], 'sum': [[9, 12, 15], [3, 12, 21], 36]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def frm_list(lista, side):\n",
+    "    \"\"\"Forma conjuntos de tamaño 'side' con los elementos de la lista, \n",
+    "        deja fuera elementos restantes\"\"\"\n",
+    "    inicio=0\n",
+    "    listaFormat = []\n",
+    "    for i in range (len(lista)+1):\n",
+    "        if i%side==0 and i>0:\n",
+    "            listaFormat.append(lista[inicio:i])\n",
+    "            inicio = i\n",
+    "    return listaFormat\n",
+    "\n",
+    "def matriz_numeros(lista, size):\n",
+    "    rows = frm_list(lista, size)\n",
+    "    columns = []\n",
+    "    for i in range(size):\n",
+    "        for j in rows:\n",
+    "            columns.append(j[i])\n",
+    "    # Se agrupa segun tamaño requerido\n",
+    "    columns = frm_list(columns,size)\n",
+    "    return (rows,columns)\n",
+    "\n",
+    "\n",
+    "def calculate(lista):\n",
+    "    if (len(lista)!=9):\n",
+    "        raise ValueError(\"List must contain nine numbers.\")\n",
+    "    \n",
+    "    rows, columns= matriz_numeros(lista, 3)\n",
+    "    # creando arreglos numpy para usar sus metodos\n",
+    "    rows = np.array(rows)\n",
+    "    columns = np.array(columns)\n",
+    "    #print(rows)\n",
+    "    #print(columns)\n",
+    "    \n",
+    "    # Creando listas segun lo que se necesite calcular\n",
+    "    mean_rows = ([x.mean() for x in rows]) #media\n",
+    "    mean_columns = ([x.mean() for x in columns])\n",
+    "    \n",
+    "    var_rows = ([x.var() for x in rows]) #varianza\n",
+    "    var_columns = ([x.var() for x in columns])\n",
+    "    \n",
+    "    std_rows = ([x.std() for x in rows]) #desviacion estandar\n",
+    "    std_columns = ([x.std() for x in columns])\n",
+    "    \n",
+    "    max_rows = ([x.max() for x in rows])\n",
+    "    max_columns = ([x.max() for x in columns])\n",
+    "    \n",
+    "    min_rows = ([x.min() for x in rows])\n",
+    "    min_columns = ([x.min() for x in columns])\n",
+    "    \n",
+    "    sum_rows = ([x.sum() for x in rows])\n",
+    "    sum_columns = ([x.sum() for x in columns])\n",
+    "    \n",
+    "    \n",
+    "    return{\n",
+    "        \"mean\": [ mean_columns, mean_rows, rows.mean()],\n",
+    "        \"variance\": [var_columns, var_rows, rows.var()],\n",
+    "        \"standar desviaton\": [std_columns, std_rows, rows.std()],\n",
+    "        \"max\": [max_columns, max_rows, rows.max()],\n",
+    "        \"min\": [min_columns, min_rows, rows.min()],\n",
+    "        \"sum\": [sum_columns, sum_rows, rows.sum()],\n",
+    "    }\n",
+    "\n",
+    "lista = [_ for _ in range(0,9)]\n",
+    "print(lista)\n",
+    "print(calculate(lista))"
    ]
   },
   {
