--- a/FCCampDataAnalysis_A1.ipynb
+++ b/FCCampDataAnalysis_A1.ipynb
@@ -98,15 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "{'mean': [[3.0, 4.0, 5.0], [1.0, 4.0, 7.0], 4.0], 'variance': [[6.0, 6.0, 6.0], [0.6666666666666666, 0.6666666666666666, 0.6666666666666666], 6.666666666666667], 'standar desviaton': [[2.449489742783178, 2.449489742783178, 2.449489742783178], [0.816496580927726, 0.816496580927726, 0.816496580927726], 2.581988897471611], 'max': [[6, 7, 8], [2, 5, 8], 8], 'min': [[0, 1, 2], [0, 3, 6], 0], 'sum': [[9, 12, 15], [3, 12, 21], 36]}\n"
+      "[2, 6, 2, 8, 4, 0, 1, 5, 7]\n",
+      "{'mean': [[3.6666666666666665, 5.0, 3.0], [3.3333333333333335, 4.0, 4.333333333333333], 3.888888888888889], 'variance': [[9.555555555555557, 0.6666666666666666, 8.666666666666666], [3.555555555555556, 10.666666666666666, 6.222222222222221], 6.987654320987654], 'standar desviaton': [[3.091206165165235, 0.816496580927726, 2.943920288775949], [1.8856180831641267, 3.265986323710904, 2.494438257849294], 2.6434171674156266], 'max': [[8, 6, 7], [6, 8, 7], 8], 'min': [[1, 4, 0], [2, 0, 1], 0], 'sum': [[11, 15, 9], [10, 12, 13], 35]}\n"
      ]
     }
    ],
@@ -169,13 +169,13 @@
     "    return{\n",
     "        \"mean\": [ mean_columns, mean_rows, rows.mean()],\n",
     "        \"variance\": [var_columns, var_rows, rows.var()],\n",
-    "        \"standar desviaton\": [std_columns, std_rows, rows.std()],\n",
+    "        \"standard desviaton\": [std_columns, std_rows, rows.std()],\n",
     "        \"max\": [max_columns, max_rows, rows.max()],\n",
     "        \"min\": [min_columns, min_rows, rows.min()],\n",
     "        \"sum\": [sum_columns, sum_rows, rows.sum()],\n",
     "    }\n",
     "\n",
-    "lista = [_ for _ in range(0,9)]\n",
+    "lista = [2,6,2,8,4,0,1,5,7]\n",
     "print(lista)\n",
     "print(calculate(lista))"
    ]
