aSe inicia segundo proyecto

--- a/FCCampDataAnalysis_A1.ipynb
+++ b/FCCampDataAnalysis_A1.ipynb
@@ -181,6 +181,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demographic Data Analyzer\n",
+    "En este reto debes analizar datos demográficos utilizando Pandas. Se te da un conjunto de datos demográficos extraídos de la base de datos del Censo de 1994. Esta es una muestra del aspecto de los datos:\n",
+    "\n",
+    "```\n",
+    "\tage\tworkclass\tfnlwgt\teducation\teducation-num\tmarital-status\toccupation\trelationship\trace\tsex\tcapital-gain\tcapital-loss\thours-per-week\tnative-country\tsalary\n",
+    "0\t39\tState-gov\t77516\tBachelors\t13\tNever-married\tAdm-clerical\tNot-in-family\tWhite\tMale\t2174\t0\t40\tUnited-States\t<=50K\n",
+    "1\t50\tSelf-emp-not-inc\t83311\tBachelors\t13\tMarried-civ-spouse\tExec-managerial\tHusband\tWhite\tMale\t0\t0\t13\tUnited-States\t<=50K\n",
+    "2\t38\tPrivate\t215646\tHS-grad\t9\tDivorced\tHandlers-cleaners\tNot-in-family\tWhite\tMale\t0\t0\t40\tUnited-States\t<=50K\n",
+    "3\t53\tPrivate\t234721\t11th\t7\tMarried-civ-spouse\tHandlers-cleaners\tHusband\tBlack\tMale\t0\t0\t40\tUnited-States\t<=50K\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Debes utilizar Pandas para responder a las siguientes preguntas:\n",
+    "\n",
+    "* ¿Cuántas personas de cada raza están representadas en este conjunto de datos? Esto debe ser una serie de Pandas con los nombres de las razas como etiquetas de índice. (columna \"race\")\n",
+    "* ¿Cuál es la edad media de los hombres?\n",
+    "* ¿Cuál es el porcentaje de personas que tienen una licenciatura?\n",
+    "* ¿Qué porcentaje de personas con estudios superiores (licenciatura, máster o doctorado) ganan más de 50.000 dólares?\n",
+    "* ¿Qué porcentaje de personas sin estudios superiores ganan más de 50.000?\n",
+    "* ¿Cuál es el número mínimo de horas que una persona trabaja a la semana?\n",
+    "* ¿Qué porcentaje de las personas que trabajan el número mínimo de horas a la semana tienen un salario superior a 50K?\n",
+    "* ¿Qué país tiene el mayor porcentaje de personas que ganan >50K y cuál es ese porcentaje?\n",
+    "* Identifica la ocupación más popular para quienes ganan >50K en la India.\n",
+    "\n",
+    "Utilice el código de inicio en el archivo `demographic_data_analyzer`. Actualice el código para que todas las variables establecidas en \"Ninguno\" se establezcan en el cálculo o código apropiado. Redondee todos los decimales a la décima más cercana.\n",
+    "\n",
+    "Las pruebas unitarias se escriben para usted en `test_module.py`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
