--- a/FCCampDataAnalysis_A1.ipynb
+++ b/FCCampDataAnalysis_A1.ipynb
@@ -215,6 +215,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age         workclass  fnlwgt  education  education-num  \\\n",
+      "0   39         State-gov   77516  Bachelors             13   \n",
+      "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
+      "2   38           Private  215646    HS-grad              9   \n",
+      "\n",
+      "       marital-status         occupation   relationship   race   sex  \\\n",
+      "0       Never-married       Adm-clerical  Not-in-family  White  Male   \n",
+      "1  Married-civ-spouse    Exec-managerial        Husband  White  Male   \n",
+      "2            Divorced  Handlers-cleaners  Not-in-family  White  Male   \n",
+      "\n",
+      "   capital-gain  capital-loss  hours-per-week native-country salary  \n",
+      "0          2174             0              40  United-States  <=50K  \n",
+      "1             0             0              13  United-States  <=50K  \n",
+      "2             0             0              40  United-States  <=50K  \n",
+      "       age     workclass  fnlwgt education  education-num      marital-status  \\\n",
+      "32558   58       Private  151910   HS-grad              9             Widowed   \n",
+      "32559   22       Private  201490   HS-grad              9       Never-married   \n",
+      "32560   52  Self-emp-inc  287927   HS-grad              9  Married-civ-spouse   \n",
+      "\n",
+      "            occupation relationship   race     sex  capital-gain  \\\n",
+      "32558     Adm-clerical    Unmarried  White  Female             0   \n",
+      "32559     Adm-clerical    Own-child  White    Male             0   \n",
+      "32560  Exec-managerial         Wife  White  Female         15024   \n",
+      "\n",
+      "       capital-loss  hours-per-week native-country salary  \n",
+      "32558             0              40  United-States  <=50K  \n",
+      "32559             0              20  United-States  <=50K  \n",
+      "32560             0              40  United-States   >50K  \n",
+      "Info filas, columnas:\t (32561, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Demographic data\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"adult.data.csv\")\n",
+    "\n",
+    "# Primeros y ultimos registros del archivo\n",
+    "print(df.head(3))\n",
+    "print(df.tail(3))\n",
+    "print(\"Info filas, columnas:\\t\",df.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        White\n",
+      "1        White\n",
+      "2        White\n",
+      "3        Black\n",
+      "4        Black\n",
+      "         ...  \n",
+      "32556    White\n",
+      "32557    White\n",
+      "32558    White\n",
+      "32559    White\n",
+      "32560    White\n",
+      "Name: race, Length: 32561, dtype: object\n",
+      "\n",
+      "\n",
+      "Cuenta los elementos de cada etiqueta\n",
+      " White                 27816\n",
+      "Black                  3124\n",
+      "Asian-Pac-Islander     1039\n",
+      "Amer-Indian-Eskimo      311\n",
+      "Other                   271\n",
+      "Name: race, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ¿Cuántos de cada raza están representados en este conjunto de datos?\n",
+    "## las etiquetas de raza deben de ser el indice\n",
+    "\n",
+    "race = df[\"race\"] #Selecciona solo la columna 'race'\n",
+    "race_count = df[\"race\"].value_counts()\n",
+    "print(race)\n",
+    "print(\"\\n\\nCuenta los elementos de cada etiqueta\\n\",race_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -225,6 +321,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
