Se termina segundo proyecto con exito

--- a/FCCampDataAnalysis_A1.ipynb
+++ b/FCCampDataAnalysis_A1.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
     "# Demographic data\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"adult.data.csv\")\n",
+    "df = pd.read_csv(\"adult_data.csv\")\n",
     "\n",
     "# Primeros y ultimos registros del archivo\n",
     "print(df.head(3))\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -311,28 +311,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Edad media de los hombres\n",
+    "average_age_men = round(df[df[\"sex\"]==\"Male\"][\"age\"].mean(),1)\n",
+    "print(average_age_men)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Porcentaje de personas con licenciatura\n",
+    "num_bachelors = len(df[df[\"education\"]==\"Bachelors\"])\n",
+    "total  = len(df)\n",
+    "percent_bachelors = round(num_bachelors/total*100, 1)\n",
+    "print(percent_bachelors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3486 46.5\n",
+      "4355 17.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Porcentaje de personas con educacion avanzada que gana mas de 50k\n",
+    "# Porcentaje de personas sin educacion avanzada ganan mas de 50k\n",
+    "higher_education = df[df[\"education\"].isin([\"Bachelors\",\"Masters\",\"Doctorate\"])]\n",
+    "lower_education = df[~df[\"education\"].isin([\"Bachelors\",\"Masters\",\"Doctorate\"])]\n",
+    "\n",
+    "hgh_education_rich = len(higher_education[higher_education.salary == \">50K\"])\n",
+    "percent_educate_rich = round( hgh_education_rich/ len(higher_education)*100, 1)\n",
+    "\n",
+    "lwr_education_rich = len(lower_education[lower_education.salary == \">50K\"])\n",
+    "percent_lower_educate_rich = round( lwr_education_rich/ len(lower_education)*100, 1)\n",
+    "\n",
+    "print(hgh_education_rich, percent_educate_rich)\n",
+    "print(lwr_education_rich, percent_lower_educate_rich)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Horas minimas trabajadas por personas a la semana\n",
+    "min_work_hours = df[\"hours-per-week\"].min()\n",
+    "\n",
+    "# Porcentaje de personas que trabajan horas minimas y ganan mas de 50k\n",
+    "num_min_workers = df[df[\"hours-per-week\"] == min_work_hours]\n",
+    "min_work_rich = round(len(num_min_workers[num_min_workers.salary == \">50K\"]) /\n",
+    "                      len(num_min_workers)*100, 1)\n",
+    "\n",
+    "print(min_work_rich)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iran\n",
+      "41.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que pais tiene  el mas alto porcentaje de personas cuyo ingreso es >50k\n",
+    "country_count = df[\"native-country\"].value_counts()\n",
+    "country_rich_count = df[df[\"salary\"]==\">50K\"][\"native-country\"].value_counts()\n",
+    "\n",
+    "highest_earning_country = (country_rich_count / country_count *100).idxmax()\n",
+    "highest_earning_country_percentage = round(\n",
+    "        (country_rich_count / country_count *100).max(), 1\n",
+    "    )\n",
+    "\n",
+    "print(highest_earning_country)\n",
+    "print(highest_earning_country_percentage)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dominican-Republic\n",
+      "2.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que pais tiene  el menor porcentaje de personas cuyo ingreso es >50k\n",
+    "\n",
+    "country_rich_count = df[df[\"salary\"]==\">50K\"][\"native-country\"].value_counts()\n",
+    "\n",
+    "lower_earning_country = (country_rich_count / country_count *100).idxmin()\n",
+    "lower_earning_country_percentage = round(\n",
+    "        (country_rich_count / country_count *100).min(), 1\n",
+    "    )\n",
+    "print(lower_earning_country)\n",
+    "print(lower_earning_country_percentage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prof-specialty\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identificar la ocupacion mas popular con un ingreso >50K en la INDIA\n",
+    "people_of_india = df[(df[\"native-country\"] ==\"India\") & (df[\"salary\"]==\">50K\")]\n",
+    "occupation_counts = people_of_india[\"occupation\"].value_counts()\n",
+    "top_in_occupation = occupation_counts.idxmax()\n",
+    "\n",
+    "print(top_in_occupation)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
