Se termina tercer proyecto

--- a/FCCampDataAnalysis_A2.ipynb
+++ b/FCCampDataAnalysis_A2.ipynb
@@ -59,10 +59,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "## Librerias necesarias\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Importe de datos\n",
+    "df = pd.read_csv(\"medical_examination.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Añadiendo columna \"overweight\" sobrepeso\n",
+    "## Aplicando 1 si es sobrepeso\n",
+    "df[\"overweight\"] = (df[\"weight\"] / (df[\"height\"]/100)**2).apply(\n",
+    "    lambda x:1 if x >25 else 0\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizar los datos haciendo los valores 1 siempre malo y 0 bueno\n",
+    "## Si el valor de cholesterol o gluc es 1, haga el valor 0. \n",
+    "## Si el valor es más de 1, haga el valor 1.\n",
+    "df[\"cholesterol\"] = df[\"cholesterol\"].apply(lambda x:0 if x==1 else 1)\n",
+    "df[\"gluc\"] = df[\"gluc\"].apply(lambda x:0 if x==1 else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_cat_plot():\n",
+    "    \"\"\"Crear un dataframe pd.melt solo para los valores de:\n",
+    "         cholesterol, gluc, smoke, alco, active, overweight\n",
+    "    \"\"\"\n",
+    "    df_cat = pd.melt(df, id_vars=[\"cardio\"], value_vars=[\n",
+    "        \"cholesterol\", \"gluc\", \"smoke\", \"alco\", \"active\", \"overweight\"\n",
+    "        ])\n",
+    "    \n",
+    "    # conjunto de datos divididos por cardio\n",
+    "    df_cat[\"total\"] = 1 # Util para el recuento\n",
+    "    df_cat = df_cat.groupby(\n",
+    "        [\"cardio\", \"variable\",\"value\"], as_index=False).count()\n",
+    "\n",
+    "    # Grafica de catplot usando sns.catplot()\n",
+    "    fig = sns.catplot(x=\"variable\", y=\"total\", \n",
+    "                      data=df_cat, hue=\"value\", kind=\"bar\", col=\"cardio\").fig \n",
+    "    \n",
+    "    fig.savefig(\"catplot.png\")\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def draw_scatter_plot():\n",
+    "    fig = sns.relplot(x=\"weight\", y=\"height\", \n",
+    "                      hue=\"active\", style=\"gender\", data=df)\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_heat_map():\n",
+    "    # tratamiento de datos erroneos o sospechosos\n",
+    "    df_heat = df[\n",
+    "        (df['ap_lo'] <= df['ap_hi']) & \n",
+    "        (df['height'] >= df['height'].quantile(0.025)) &\n",
+    "        (df['height'] <= df['height'].quantile(0.975)) &\n",
+    "        (df['weight'] >= df['weight'].quantile(0.025)) &\n",
+    "        (df['weight'] <= df['weight'].quantile(0.975)) \n",
+    "        ] \n",
+    "    ## Calculo de la matriz de correlaciones\n",
+    "    corr = df_heat.corr(method='pearson')\n",
+    "    \n",
+    "    ## mask para el triangulo superior\n",
+    "    mask = np.triu(corr)\n",
+    "    \n",
+    "    ## Configuracion para la figura\n",
+    "    fig, ax = plt.subplots(figsize=(12, 12))\n",
+    "    \n",
+    "    ## 'dibujar' el heatmap \n",
+    "    sns.heatmap(\n",
+    "        corr, linewidths=1, annot=True, square=True, \n",
+    "        mask=mask, fmt='.1f',\n",
+    "        center=0.08, cbar_kws={'shrink':0.5}\n",
+    "        )\n",
+    "    #fig.savefig('heatmap.png')\n",
+    "    \n",
+    "    return fig"
+   ]
   },
   {
    "cell_type": "code",
@@ -73,10 +184,25 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "interpreter": {
+   "hash": "c469c999aae2bf6d578d6881606ced546d1546d312a4811937df5b24665ee8bc"
   },
-  "orig_nbformat": 4
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
